# events-manager

./: .env  .gitignore  Dockefile  Dockerfile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 15b7ea14248a_initial_migration.py  51f724d68537_init_time_and_end_time_session.py  51f724d68538_added_fields_to_session.py  ccb17dfcb039_added_relation_betwen_attendee_and_.py  f321c8a6b914_changed_relation_event_speaker.py
app/: celery_worker.py  main.py
app/config/: settings.py
app/core/domain/: attendee.py  event.py  events.py  resource.py  session.py  speaker.py
app/core/ports/: attendee_repository.py  event_repository.py  resource_repository.py  session_repository.py  speaker_repository.py
app/core/services/: attendee_service.py  email_service.py  event_service.py  resource_service.py  session_service.py  speaker_service.py
app/core/tasks/: email_tasks.py  redis.py
app/infrastructure/api/: attendee_controller.py  event_controller.py  resource_controller.py  session_controller.py  speaker_controller.py
app/infrastructure/cache/: client.py  event_cache.py
app/infrastructure/database/: event_handlers.py  models.py  postgres_attendee_repository.py  postgres_event_repository.py  postgres_resource_repository.py  postgres_session_repository.py  postgres_speaker_repository.py  session.py
app/tests/: test_attendeed_service.py  test_event_service.py  test_resource_service.py  test_session_service.py  test_speaker_service.py
app/utils/: elasticsearch_utils.py
(+2 files in other folders)
