[project]
name = "events-manager"
version = "0.1.0"
description = "manage dependency in project"
authors = [
    {name = "John Acevedo"}
]
package-mode = false 

requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "elasticsearch (>=8.17.0,<9.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "pydantic[email] (>=2.10.5,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "sendgrid (>=6.11.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
alembic = "^1.14.0"

